--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
     </div>
 
     <div class="row">
+      <button data-value="7" class="button">7</button>
+      <button data-value="8" class="button">8</button>
+      <button data-value="9" class="button">9</button>
+      <button data-value="*" class="button">&times;</button>
+      
+      <!--
       <button id="7" onClick="whenClicked(this.id)">7</button>
       <button id="8" onClick="whenClicked(this.id)">8</button>
       <button id="9" onClick="whenClicked(this.id)">9</button>
       <button id="*" onClick="whenClicked(this.id)">&times;</button>
+      -->
+      
     </div>
 
     <div class="row">
