--- a/index.html
+++ b/index.html
@@ -13,55 +13,161 @@
 <!-- Created by: Elminster White - elminsterthewhite@gmail.com -->
 <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
 
-<div class="container">
-  <div id="calculator">
+  <div id="calculator1">
+    <div class="container">
+      <div id="calculator">
 
-    <div class="row">
-      <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
+        <div class="row">
+          <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
+        </div>
+
+        <div class="row" id="display">
+          <form>
+            <input type="text" id="inTxtboxScrOper"></input>
+            <input type="text" id="inputTextboxScreen" value="0"></input>
+          </form>
+        </div>
+
+        <div class="row">
+          <button data-value="deleteAll" class="button">AC</button>
+          <button data-value="backOne" class="button">CE</button>
+          <button data-value="." class="button">.</button>
+          <button data-value="/" class="button">&divide;</button>
+        </div>
+
+        <div class="row">
+          <button data-value="7" class="button">7</button>
+          <button data-value="8" class="button">8</button>
+          <button data-value="9" class="button">9</button>
+          <button data-value="*" class="button">&times;</button>
+        </div>
+
+        <div class="row">
+          <button data-value="4" class="button">4</button>
+          <button data-value="5" class="button">5</button>
+          <button data-value="6" class="button">6</button>
+          <button data-value="-" class="button">-</button>
+        </div>
+
+        <div class="row">
+          <button data-value="1" class="button">1</button>
+          <button data-value="2" class="button">2</button>
+          <button data-value="3" class="button">3</button>
+          <button data-value="+" class="button">+</button>
+        </div>
+
+        <div class="row three">
+          <button data-value="0" class="button">0</button>
+          <button data-value="total" class="button">=</button>
+        </div>
+
+      </div>
     </div>
-
-    <div class="row" id="display">
-      <form>
-        <input type="text" id="inTxtboxScrOper"></input>
-        <input type="text" id="inputTextboxScreen" value="0"></input>
-      </form>
-    </div>
-
-    <div class="row">
-      <button data-value="deleteAll" class="button">AC</button>
-      <button data-value="backOne" class="button">CE</button>
-      <button data-value="." class="button">.</button>
-      <button data-value="/" class="button">&divide;</button>
-    </div>
-
-    <div class="row">
-      <button data-value="7" class="button">7</button>
-      <button data-value="8" class="button">8</button>
-      <button data-value="9" class="button">9</button>
-      <button data-value="*" class="button">&times;</button>
-    </div>
-
-    <div class="row">
-      <button data-value="4" class="button">4</button>
-      <button data-value="5" class="button">5</button>
-      <button data-value="6" class="button">6</button>
-      <button data-value="-" class="button">-</button>
-    </div>
-
-    <div class="row">
-      <button data-value="1" class="button">1</button>
-      <button data-value="2" class="button">2</button>
-      <button data-value="3" class="button">3</button>
-      <button data-value="+" class="button">+</button>
-    </div>
-
-    <div class="row three">
-      <button data-value="0" class="button">0</button>
-      <button data-value="total" class="button">=</button>
-    </div>
-
   </div>
-</div>
+  
+  <div id="calculator2">
+    <div class="container">
+      <div id="calculator">
+
+        <div class="row">
+          <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
+        </div>
+
+        <div class="row" id="display">
+          <form>
+            <input type="text" id="inTxtboxScrOper"></input>
+            <input type="text" id="inputTextboxScreen" value="0"></input>
+          </form>
+        </div>
+
+        <div class="row">
+          <button data-value="deleteAll" class="button">AC</button>
+          <button data-value="backOne" class="button">CE</button>
+          <button data-value="." class="button">.</button>
+          <button data-value="/" class="button">&divide;</button>
+        </div>
+
+        <div class="row">
+          <button data-value="7" class="button">7</button>
+          <button data-value="8" class="button">8</button>
+          <button data-value="9" class="button">9</button>
+          <button data-value="*" class="button">&times;</button>
+        </div>
+
+        <div class="row">
+          <button data-value="4" class="button">4</button>
+          <button data-value="5" class="button">5</button>
+          <button data-value="6" class="button">6</button>
+          <button data-value="-" class="button">-</button>
+        </div>
+
+        <div class="row">
+          <button data-value="1" class="button">1</button>
+          <button data-value="2" class="button">2</button>
+          <button data-value="3" class="button">3</button>
+          <button data-value="+" class="button">+</button>
+        </div>
+
+        <div class="row three">
+          <button data-value="0" class="button">0</button>
+          <button data-value="total" class="button">=</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  
+  <div id="calculator3">
+    <div class="container">
+      <div id="calculator">
+
+        <div class="row">
+          <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
+        </div>
+
+        <div class="row" id="display">
+          <form>
+            <input type="text" id="inTxtboxScrOper"></input>
+            <input type="text" id="inputTextboxScreen" value="0"></input>
+          </form>
+        </div>
+
+        <div class="row">
+          <button data-value="deleteAll" class="button">AC</button>
+          <button data-value="backOne" class="button">CE</button>
+          <button data-value="." class="button">.</button>
+          <button data-value="/" class="button">&divide;</button>
+        </div>
+
+        <div class="row">
+          <button data-value="7" class="button">7</button>
+          <button data-value="8" class="button">8</button>
+          <button data-value="9" class="button">9</button>
+          <button data-value="*" class="button">&times;</button>
+        </div>
+
+        <div class="row">
+          <button data-value="4" class="button">4</button>
+          <button data-value="5" class="button">5</button>
+          <button data-value="6" class="button">6</button>
+          <button data-value="-" class="button">-</button>
+        </div>
+
+        <div class="row">
+          <button data-value="1" class="button">1</button>
+          <button data-value="2" class="button">2</button>
+          <button data-value="3" class="button">3</button>
+          <button data-value="+" class="button">+</button>
+        </div>
+
+        <div class="row three">
+          <button data-value="0" class="button">0</button>
+          <button data-value="total" class="button">=</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
  
 <script src="js/index.js"></script>
 </body>
