--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         <div class="row" id="display">
           <form>
-            <input type="text" id="inTxtboxScrOper"></input>
-            <input type="text" id="inputTextboxScreen" value="0"></input>
+            <input type="text" class="inputTextboxUpper"></input>
+            <input type="text" class="inputTextboxLower" value="0"></input>
           </form>
         </div>
 
@@ -66,7 +66,7 @@
   </div>
   
   <div id="calculator2">
-    <div class="container">
+   <div class="container">
       <div id="calculator">
 
         <div class="row">
@@ -75,8 +75,8 @@
 
         <div class="row" id="display">
           <form>
-            <input type="text" id="inTxtboxScrOper"></input>
-            <input type="text" id="inputTextboxScreen" value="0"></input>
+            <input type="text" class="inputTextboxUpper"></input>
+            <input type="text" class="inputTextboxLower" value="0"></input>
           </form>
         </div>
 
@@ -127,8 +127,8 @@
 
         <div class="row" id="display">
           <form>
-            <input type="text" id="inTxtboxScrOper"></input>
-            <input type="text" id="inputTextboxScreen" value="0"></input>
+            <input type="text" class="inputTextboxUpper"></input>
+            <input type="text" class="inputTextboxLower" value="0"></input>
           </form>
         </div>
 
@@ -169,6 +169,6 @@
     </div>
   </div>
  
-<script src="js/index.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
