Add code and change HTML for 'new Calculator("calculatorX")'

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
   <div id="calculator1">
     <div class="container">
-      <div id="calculator">
+      <div class="support">
 
         <div class="row">
           <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
         </div>
 
-        <div class="row" id="display">
+        <div id="display" class="row">
           <form>
             <input type="text" class="inputTextboxUpper"></input>
             <input type="text" class="inputTextboxLower" value="0"></input>
@@ -66,8 +66,8 @@
   </div>
   
   <div id="calculator2">
-   <div class="container">
-      <div id="calculator">
+    <div class="container">
+      <div class="support">
 
         <div class="row">
           <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
@@ -119,7 +119,7 @@
   
   <div id="calculator3">
     <div class="container">
-      <div id="calculator">
+      <div class="support">
 
         <div class="row">
           <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
