Get rid of all unnecessary IDs

--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
 <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
 
   <div id="calculator1">
+    <!-- START -->
     <div class="container">
       <div class="support">
 
         <div class="row">
-          <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
-        </div>
-
-        <div id="display" class="row">
-          <form>
-            <input type="text" class="inputTextboxUpper"></input>
-            <input type="text" class="inputTextboxLower" value="0"></input>
-          </form>
+          <div class="title"><p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p></div>
         </div>
 
         <div class="row">
-          <button data-value="deleteAll" class="button">AC</button>
+          <div class="display">
+            <form>
+              <input type="text" class="inputTextboxUpper"></input>
+              <input type="text" class="inputTextboxLower" value="0"></input>
+            </form>
+          </div>
+        </div>
+
+        <div class="row">
+          <button data-value="deleteAll" class="button ac">AC</button>
           <button data-value="backOne" class="button">CE</button>
           <button data-value="." class="button">.</button>
           <button data-value="/" class="button">&divide;</button>
@@ -58,30 +61,34 @@
 
         <div class="row three">
           <button data-value="0" class="button">0</button>
-          <button data-value="total" class="button">=</button>
+          <button data-value="total" class="button total">=</button>
         </div>
 
       </div>
     </div>
+    <!-- END -->    
   </div>
   
   <div id="calculator2">
+    <!-- START -->
     <div class="container">
       <div class="support">
 
         <div class="row">
-          <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
-        </div>
-
-        <div class="row" id="display">
-          <form>
-            <input type="text" class="inputTextboxUpper"></input>
-            <input type="text" class="inputTextboxLower" value="0"></input>
-          </form>
+          <div class="title"><p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p></div>
         </div>
 
         <div class="row">
-          <button data-value="deleteAll" class="button">AC</button>
+          <div class="display">
+            <form>
+              <input type="text" class="inputTextboxUpper"></input>
+              <input type="text" class="inputTextboxLower" value="0"></input>
+            </form>
+          </div>
+        </div>
+
+        <div class="row">
+          <button data-value="deleteAll" class="button ac">AC</button>
           <button data-value="backOne" class="button">CE</button>
           <button data-value="." class="button">.</button>
           <button data-value="/" class="button">&divide;</button>
@@ -110,30 +117,34 @@
 
         <div class="row three">
           <button data-value="0" class="button">0</button>
-          <button data-value="total" class="button">=</button>
+          <button data-value="total" class="button total">=</button>
         </div>
 
       </div>
     </div>
+    <!-- END --> 
   </div>
   
   <div id="calculator3">
+    <!-- START -->
     <div class="container">
       <div class="support">
 
         <div class="row">
-          <div id="title"><p><span id="name">CalculatoR</span><span id="created"><br>Made by: Elminster White</span></p></div>
-        </div>
-
-        <div class="row" id="display">
-          <form>
-            <input type="text" class="inputTextboxUpper"></input>
-            <input type="text" class="inputTextboxLower" value="0"></input>
-          </form>
+          <div class="title"><p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p></div>
         </div>
 
         <div class="row">
-          <button data-value="deleteAll" class="button">AC</button>
+          <div class="display">
+            <form>
+              <input type="text" class="inputTextboxUpper"></input>
+              <input type="text" class="inputTextboxLower" value="0"></input>
+            </form>
+          </div>
+        </div>
+
+        <div class="row">
+          <button data-value="deleteAll" class="button ac">AC</button>
           <button data-value="backOne" class="button">CE</button>
           <button data-value="." class="button">.</button>
           <button data-value="/" class="button">&divide;</button>
@@ -162,11 +173,12 @@
 
         <div class="row three">
           <button data-value="0" class="button">0</button>
-          <button data-value="total" class="button">=</button>
+          <button data-value="total" class="button total">=</button>
         </div>
 
       </div>
     </div>
+    <!-- END -->     
   </div>
  
 <script src="js/scripts.js"></script>
