--- a/index.html
+++ b/index.html
@@ -1,186 +1,168 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>JavaScript Calculator</title>
-  
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="css/style.css">
-</head>
+  <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css"> </head>
 
 <body>
-<!-- JavaScript Calculator v.2.0 -->
-<!-- Created by: Elminster White - elminsterthewhite@gmail.com -->
-<link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
-
-  <div id="calculator1">
-    <!-- START -->
-    <div class="container">
-      <div class="support">
-
-        <div class="row">
-          <div class="title"><p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p></div>
-        </div>
-
-        <div class="row">
-          <div class="display">
-            <form>
-              <input type="text" class="inputTextboxUpper"></input>
-              <input type="text" class="inputTextboxLower" value="0"></input>
-            </form>
+  <!-- JavaScript Calculator v.2.0 -->
+  <!-- Created by: Elminster White - elminsterthewhite@gmail.com -->
+  <div class="container">
+    <div id="calculator1">
+      <!-- START CLONING -->
+      <div class="container-calc">
+        <div class="support">
+          <div class="row">
+            <div class="title">
+              <p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="display">
+              <form>
+                <input type="text" class="inputTextboxUpper"></input>
+                <input type="text" class="inputTextboxLower" value="0"></input>
+              </form>
+            </div>
+          </div>
+          <div class="row">
+            <button data-value="deleteAll" class="button ac">AC</button>
+            <button data-value="backOne" class="button">CE</button>
+            <button data-value="." class="button">.</button>
+            <button data-value="/" class="button">&divide;</button>
+          </div>
+          <div class="row">
+            <button data-value="7" class="button">7</button>
+            <button data-value="8" class="button">8</button>
+            <button data-value="9" class="button">9</button>
+            <button data-value="*" class="button">&times;</button>
+          </div>
+          <div class="row">
+            <button data-value="4" class="button">4</button>
+            <button data-value="5" class="button">5</button>
+            <button data-value="6" class="button">6</button>
+            <button data-value="-" class="button">-</button>
+          </div>
+          <div class="row">
+            <button data-value="1" class="button">1</button>
+            <button data-value="2" class="button">2</button>
+            <button data-value="3" class="button">3</button>
+            <button data-value="+" class="button">+</button>
+          </div>
+          <div class="row three">
+            <button data-value="0" class="button">0</button>
+            <button data-value="total" class="button total">=</button>
           </div>
         </div>
-
-        <div class="row">
-          <button data-value="deleteAll" class="button ac">AC</button>
-          <button data-value="backOne" class="button">CE</button>
-          <button data-value="." class="button">.</button>
-          <button data-value="/" class="button">&divide;</button>
-        </div>
-
-        <div class="row">
-          <button data-value="7" class="button">7</button>
-          <button data-value="8" class="button">8</button>
-          <button data-value="9" class="button">9</button>
-          <button data-value="*" class="button">&times;</button>
-        </div>
-
-        <div class="row">
-          <button data-value="4" class="button">4</button>
-          <button data-value="5" class="button">5</button>
-          <button data-value="6" class="button">6</button>
-          <button data-value="-" class="button">-</button>
-        </div>
-
-        <div class="row">
-          <button data-value="1" class="button">1</button>
-          <button data-value="2" class="button">2</button>
-          <button data-value="3" class="button">3</button>
-          <button data-value="+" class="button">+</button>
-        </div>
-
-        <div class="row three">
-          <button data-value="0" class="button">0</button>
-          <button data-value="total" class="button total">=</button>
-        </div>
-
       </div>
+      <!-- END CLONING -->
     </div>
-    <!-- END -->    
-  </div>
-  
-  <div id="calculator2">
-    <!-- START -->
-    <div class="container">
-      <div class="support">
-
-        <div class="row">
-          <div class="title"><p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p></div>
-        </div>
-
-        <div class="row">
-          <div class="display">
-            <form>
-              <input type="text" class="inputTextboxUpper"></input>
-              <input type="text" class="inputTextboxLower" value="0"></input>
-            </form>
+    <div id="calculator2">
+      <!-- START CLONING -->
+      <div class="container-calc">
+        <div class="support">
+          <div class="row">
+            <div class="title">
+              <p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="display">
+              <form>
+                <input type="text" class="inputTextboxUpper"></input>
+                <input type="text" class="inputTextboxLower" value="0"></input>
+              </form>
+            </div>
+          </div>
+          <div class="row">
+            <button data-value="deleteAll" class="button ac">AC</button>
+            <button data-value="backOne" class="button">CE</button>
+            <button data-value="." class="button">.</button>
+            <button data-value="/" class="button">&divide;</button>
+          </div>
+          <div class="row">
+            <button data-value="7" class="button">7</button>
+            <button data-value="8" class="button">8</button>
+            <button data-value="9" class="button">9</button>
+            <button data-value="*" class="button">&times;</button>
+          </div>
+          <div class="row">
+            <button data-value="4" class="button">4</button>
+            <button data-value="5" class="button">5</button>
+            <button data-value="6" class="button">6</button>
+            <button data-value="-" class="button">-</button>
+          </div>
+          <div class="row">
+            <button data-value="1" class="button">1</button>
+            <button data-value="2" class="button">2</button>
+            <button data-value="3" class="button">3</button>
+            <button data-value="+" class="button">+</button>
+          </div>
+          <div class="row three">
+            <button data-value="0" class="button">0</button>
+            <button data-value="total" class="button total">=</button>
           </div>
         </div>
-
-        <div class="row">
-          <button data-value="deleteAll" class="button ac">AC</button>
-          <button data-value="backOne" class="button">CE</button>
-          <button data-value="." class="button">.</button>
-          <button data-value="/" class="button">&divide;</button>
-        </div>
-
-        <div class="row">
-          <button data-value="7" class="button">7</button>
-          <button data-value="8" class="button">8</button>
-          <button data-value="9" class="button">9</button>
-          <button data-value="*" class="button">&times;</button>
-        </div>
-
-        <div class="row">
-          <button data-value="4" class="button">4</button>
-          <button data-value="5" class="button">5</button>
-          <button data-value="6" class="button">6</button>
-          <button data-value="-" class="button">-</button>
-        </div>
-
-        <div class="row">
-          <button data-value="1" class="button">1</button>
-          <button data-value="2" class="button">2</button>
-          <button data-value="3" class="button">3</button>
-          <button data-value="+" class="button">+</button>
-        </div>
-
-        <div class="row three">
-          <button data-value="0" class="button">0</button>
-          <button data-value="total" class="button total">=</button>
-        </div>
-
       </div>
+      <!-- END CLONING -->
     </div>
-    <!-- END --> 
-  </div>
-  
-  <div id="calculator3">
-    <!-- START -->
-    <div class="container">
-      <div class="support">
-
-        <div class="row">
-          <div class="title"><p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p></div>
-        </div>
-
-        <div class="row">
-          <div class="display">
-            <form>
-              <input type="text" class="inputTextboxUpper"></input>
-              <input type="text" class="inputTextboxLower" value="0"></input>
-            </form>
+    <div id="calculator3">
+      <!-- START CLONING -->
+      <div class="container-calc">
+        <div class="support">
+          <div class="row">
+            <div class="title">
+              <p><span class="name">CalculatoR</span><span class="created"><br>Made by: Elminster White</span></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="display">
+              <form>
+                <input type="text" class="inputTextboxUpper"></input>
+                <input type="text" class="inputTextboxLower" value="0"></input>
+              </form>
+            </div>
+          </div>
+          <div class="row">
+            <button data-value="deleteAll" class="button ac">AC</button>
+            <button data-value="backOne" class="button">CE</button>
+            <button data-value="." class="button">.</button>
+            <button data-value="/" class="button">&divide;</button>
+          </div>
+          <div class="row">
+            <button data-value="7" class="button">7</button>
+            <button data-value="8" class="button">8</button>
+            <button data-value="9" class="button">9</button>
+            <button data-value="*" class="button">&times;</button>
+          </div>
+          <div class="row">
+            <button data-value="4" class="button">4</button>
+            <button data-value="5" class="button">5</button>
+            <button data-value="6" class="button">6</button>
+            <button data-value="-" class="button">-</button>
+          </div>
+          <div class="row">
+            <button data-value="1" class="button">1</button>
+            <button data-value="2" class="button">2</button>
+            <button data-value="3" class="button">3</button>
+            <button data-value="+" class="button">+</button>
+          </div>
+          <div class="row three">
+            <button data-value="0" class="button">0</button>
+            <button data-value="total" class="button total">=</button>
           </div>
         </div>
-
-        <div class="row">
-          <button data-value="deleteAll" class="button ac">AC</button>
-          <button data-value="backOne" class="button">CE</button>
-          <button data-value="." class="button">.</button>
-          <button data-value="/" class="button">&divide;</button>
-        </div>
-
-        <div class="row">
-          <button data-value="7" class="button">7</button>
-          <button data-value="8" class="button">8</button>
-          <button data-value="9" class="button">9</button>
-          <button data-value="*" class="button">&times;</button>
-        </div>
-
-        <div class="row">
-          <button data-value="4" class="button">4</button>
-          <button data-value="5" class="button">5</button>
-          <button data-value="6" class="button">6</button>
-          <button data-value="-" class="button">-</button>
-        </div>
-
-        <div class="row">
-          <button data-value="1" class="button">1</button>
-          <button data-value="2" class="button">2</button>
-          <button data-value="3" class="button">3</button>
-          <button data-value="+" class="button">+</button>
-        </div>
-
-        <div class="row three">
-          <button data-value="0" class="button">0</button>
-          <button data-value="total" class="button total">=</button>
-        </div>
-
       </div>
+      <!-- END CLONING -->
     </div>
-    <!-- END -->     
   </div>
- 
-<script src="js/scripts.js"></script>
+  <div class="info"> Example of reusable code </div>
+  <script src="js/math.js" type="text/javascript"></script>
+  <script src="js/scripts.js"></script>
 </body>
+
 </html>
